// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldArea component Creates a text field 1`] = `
<div
  className="caldera-field-group caldera-field-area-text is-required"
  data-field-type="text"
>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-text"
  >
    <label
      htmlFor="firstName"
    >
      First Name
    </label>
    <input
      aria-describedby="firstName__help"
      className="caldera-field caldera-field-text"
      id="firstName"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value="roy"
    />
    <p
      className="caldera-control__help"
      id="firstName__help"
    >
      your first name
    </p>
  </div>
</div>
`;

exports[`FieldArea component Creates an select field 1`] = `
<div
  className="caldera-field-group caldera-field-area-select is-required"
  data-field-type="select"
>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-select"
  >
    <label
      htmlFor="selectFieldId"
    >
      Select Field Label
    </label>
    <select
      aria-describedby="selectFieldId__help"
      className="caldera-field caldera-field-select"
      id="selectFieldId"
      multiple={false}
      onChange={[Function]}
    >
      <option
        value={0}
      >
        Zero
      </option>
      <option
        value={1}
      >
        One
      </option>
      <option
        value={2}
      >
        Two
      </option>
    </select>
    <p
      className="caldera-control__help"
      id="selectFieldId__help"
    >
      Select field description
    </p>
  </div>
</div>
`;

exports[`FieldArea component Shows errors 1`] = `
<div
  className="caldera-field-group caldera-field-area-text has-error is-required"
  data-field-type="text"
>
  <div
    className="caldera-field-wrapper caldera-field-wrapper-text"
  >
    <label
      htmlFor="firstName"
    >
      First Name
    </label>
    <input
      aria-describedby="firstName__help"
      className="caldera-field caldera-field-text"
      id="firstName"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value="roy"
    />
    <p
      className="caldera-control__help"
      id="firstName__help"
    >
      your first name
    </p>
  </div>
  <div
    className="caldera-components-message has-error caldera-components-error"
  >
    Fail Cake!
  </div>
</div>
`;
